<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ConfigActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pic"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/agriscan"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/main_title" />

            <LinearLayout
                android:id="@+id/line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom = "16dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/bleCard"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_settings_bluetooth" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/card1_title"
                            android:textColor="@color/darkGray" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="12dp"
                            android:background="@color/darkGray" />

                        <TextView
                            android:id="@+id/bleText"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/card_active"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:background="@color/darkGray"
                            android:textColor="@color/white"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/localCard"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_location" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/card2_title"
                            android:textColor="@color/darkGray" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="12dp"
                            android:background="@color/darkGray" />


                        <TextView
                            android:id="@+id/localText"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/card_active"
                            android:layout_marginTop="10dp"
                            android:enabled="false"
                            android:clickable="false"
                            android:background="@color/secondary_text"
                            android:textColor="@color/white"/>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/configCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/card3_title"
                        android:drawableStart="@drawable/ic_settings"
                        android:textColor="@color/darkGray" />

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/acidityRadioBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="Acidité"/>
                        <RadioButton
                            android:id="@+id/mixingRadioBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="Mixing"/>
                        <RadioButton
                            android:id="@+id/bothRadioBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="Les deux"/>

                    </RadioGroup>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:drawableEnd="@drawable/ic_cancel"
                android:drawablePadding="16dp"
                android:text="@string/config_incompl" />
            <Button
                android:id="@+id/proceedBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_shape_deactive"
                android:drawableEnd="@drawable/ic_rss"
                android:padding="16dp"
                android:enabled="false"
                android:clickable="false"
                android:text="@string/proceed_btn"
                android:textColor="@color/colorPrimaryDark" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>