<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    android:padding="20dp"
    tools:context=".SensorActivity">

    <ImageView
        android:id="@+id/sensorImg"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/agriscan" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimaryDark"
       />

    <TextView
        android:id="@+id/sensorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="12dp"
        android:visibility="visible"
        android:text="@string/text_view_progress"/>

    <Button
        android:id="@+id/calibr_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_custom"
        android:text="@string/calibrate_btn_name"
        android:textAllCaps="false"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/scan_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape_deactive"
            android:text="@string/scanner_btn_name"
            android:textAllCaps="false"
            android:visibility="gone"
            android:enabled="false"
            android:clickable="false"
            android:padding="16dp"
            android:layout_toStartOf="@+id/view"
            android:textColor="@color/white" />

        <View
            android:id="@+id/view"
            android:layout_height="1dp"
            android:layout_width="0dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_margin="6dp"
            />

        <Button
            android:id="@+id/stop_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_custom"
            android:text="@string/stop_btn_name"
            android:visibility="gone"
            android:padding="16dp"
            android:layout_toEndOf="@+id/view"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/resultCard"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:cardElevation="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/olive_oil"
                android:contentDescription="@string/app_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/resultValue"
                android:layout_width="278dp"
                android:layout_height="54dp"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/resultCard2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:cardElevation="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/olive_oil"
                android:contentDescription="@string/app_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/resultValue2"
                android:layout_width="278dp"
                android:layout_height="54dp"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img2"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/resultCard3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:cardElevation="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/olive_oil"
                android:contentDescription="@string/app_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/resultValue3"
                android:layout_width="278dp"
                android:layout_height="54dp"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img3"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/print_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape_round"
        android:text="@string/imprim_btn"
        android:textAllCaps="false"
        android:visibility="gone"
        android:enabled="false"
        android:clickable="false"
        android:drawableEnd="@drawable/ic_print"
        android:padding="12dp"
        android:layout_marginTop="35dp"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>