<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    android:padding="20dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/btCard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardElevation="12dp">

        <TextView
            android:id="@+id/bluetoothText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/active_btn_name"
            android:gravity="center"
            android:textColor="@color/darkGray"
            android:layout_margin="16dp"
            android:drawablePadding="16dp"
            app:drawableLeftCompat="@drawable/ic_bluetooth"
            app:drawableRightCompat="@drawable/ic_state" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/scanCard"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        app:cardElevation="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_scan"
                android:layout_margin="20dp"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/spectrotext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/scan_btn_name"
                android:layout_centerInParent="true"
                android:textColor="@color/darkGray"
                android:layout_margin="20dp" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:visibility="gone"
                android:layout_margin="20dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calibr_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_custom"
        android:text="@string/calibrate_btn_name"
        android:textAllCaps="false"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/scan_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom"
            android:text="@string/scanner_btn_name"
            android:textAllCaps="false"
            android:visibility="gone"
            android:padding="16dp"
            android:layout_toLeftOf="@+id/view"
            android:textColor="@color/white" />

        <View
            android:id="@+id/view"
            android:layout_height="1dp"
            android:layout_width="0dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_margin="6dp"
            />

        <Button
            android:id="@+id/stop_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_custom"
            android:text="@string/stop_btn_name"
            android:visibility="gone"
            android:padding="16dp"
            android:layout_toRightOf="@+id/view"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/resultCard"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        app:cardElevation="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/olive_oil"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/resultValue"
                android:layout_width="278dp"
                android:layout_height="54dp"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/resultCard2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        app:cardElevation="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/olive_oil"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/resultValue2"
                android:layout_width="278dp"
                android:layout_height="54dp"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img2"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/resultCard3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        app:cardElevation="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/olive_oil"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/resultValue3"
                android:layout_width="278dp"
                android:layout_height="54dp"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img3"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>